CHANGES-1.4.txt
---------------

CHANGES IN CUPS V1.4.3

	- SECURITY: The scheduler could try responding on a closed client
	  connection, leading to a crash (STR #3200)
	- The web interface did not allow users to successfully add serial
	  printers (STR #3391)
	- cupsTempFd() did not work in some situations (STR #3382)
	- Some C API headers were missing C++ wrapper logic.
	- Added an Indonesian translation (STR #3352)
	- The PPD compiler did not localize single-language PPD options properly
	  (STR #3386)
	- Modifying a printer from the web interface sometimes caused the wrong
	  driver to be selected (STR #3418)
	- The scheduler did not handle out-of-memory conditions properly when
	  loading a job (STR #3407)
	- When adding printers from the web interface, the dynamic updates of
	  the device list made it hard to pick a device (STR #3406)
	- Fixed a typo in the web interface admin page template (STR 3403)
	- The web interface did not preserve the "printer is shared" state when
	  modifying a printer (STR #3390)
	- The PPD compiler incorrectly inserted translations of empty strings
	  (STR #3411)
	- The scheduler did not reset the SIGPIPE handler of child processes
	  (STR #3399)
	- cupsGetNamedDest() incorrectly returned the default printer if the
	  named printer did not exist (STR #3397)
	- Fixed a GNU TLS error handling bug (STR #3381)


CHANGES IN CUPS V1.4.2

	- SECURITY: The CUPS web interface was vulnerable to several XSS and
	  HTTP header/body attacks via attribute injection (STR #3367,
	  STR #3401)
	- Fixed localization errors (STR #3359, STR #3372, STR #3380, STR #3387)
	- The documentation for classes.conf and printers.conf did not provide
	  the correct instructions for manual changes (STR #3351)
	- The scheduler did not always rebuild printer cache files when the
	  driver was changed (STR #3356)
	- The documentation makefile failed to install localizations when using
	  newer versions of Bash (STR #3360)